--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Css/bootstrap.css">
+    <style>
+       .card-img-custom {
+        height: 200px;
+       object-fit: cover;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -44,14 +50,58 @@
           </div>
         </div>
     </nav>
-    <div class="card" style="width: 18rem;">
-        <img src="Media/Hero.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+    <div class="container">
+      <div class="text-center mt-5 mb-3">
+          <h1>Te amo mi amorcito</h1>
       </div>
+      <div class="row justify-content-center">
+        <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-3 col-sm-6 my-3">
+                  <div class="card">
+                      <img src="Media/img1.jpg" class="card-img-top card-img-custom" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">Título 1</h5>
+                          <p class="card-text">Descripción de la card 1.</p>
+                          <a href="#" class="btn btn-primary">Ir a detalle</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6 my-3">
+                  <div class="card">
+                      <img src="Media/img2.jpg" class="card-img-top card-img-custom" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">Título 2</h5>
+                          <p class="card-text">Descripción de la card 2.</p>
+                          <a href="#" class="btn btn-primary">Ir a detalle</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6 my-3">
+                  <div class="card">
+                      <img src="Media/img3.jpeg" class="card-img-top card-img-custom" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">Título 3</h5>
+                          <p class="card-text">Descripción de la card 3.</p>
+                          <a href="#" class="btn btn-primary">Ir a detalle</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6 my-3">
+                  <div class="card">
+                      <img src="Media/img4.JPG" class="card-img-top card-img-custom" alt="...">
+                      <div class="card-body">
+                          <h5 class="card-title">Título 4</h5>
+                          <p class="card-text">Descripción de la card 4.</p>
+                          <a href="#" class="btn btn-primary">Ir a detalle</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>      
+      </div>
+  </div>
+  
 </body>
 <script src="js/bootstrap.js"></script>
 </html>
