--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         height: 200px;
        object-fit: cover;
         }
+        .full-height {
+           height: 100vh;
+        }
+        .center-xy {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
     </style>
 </head>
 <body>
@@ -50,10 +58,10 @@
           </div>
         </div>
     </nav>
+    <div class="container full-height center-xy">
+      <h1>Proximamente</h1>
+  </div>
     <div class="container">
-      <div class="text-center mt-5 mb-3">
-          <h1>Te amo mi amorcito</h1>
-      </div>
       <div class="row justify-content-center">
         <div class="container">
           <div class="row justify-content-center">
