Se agrego el background

--- a/index.html
+++ b/index.html
@@ -97,9 +97,14 @@
           </div>
         </div>
     </nav>
-    <div class="container-fluid full-height center-xy pallarax ">
+    <div class="container-fluid full-height center-xy pallarax hero-unit">
       <div class="parallax-text">
-        <h1>Proximamente</h1>
+        <h1>Proximamente en una galaxia muy lejana</h1>
+        <p style="color: white;">El mejor servicio del mundo</p>
+       <p>
+        <a class="btn btn-primary btn-large">
+          Conoce mas
+        </a>
       </div>
   </div>
     <div class="container">
