Se agrego el background

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
           top: 50%;
           transform: translateY(-50%);
         }
+        @media (max-width: 576px) {
+          .parallax-text {
+            padding-left: 30px;
+            padding-right: 30px;
+          }
+        }
     </style>
 </head>
 <body>
@@ -107,7 +113,7 @@
         </a>
       </div>
   </div>
-    <div class="container">
+  <div class="container">
       <div class="row justify-content-center">
         <div class="container">
           <div class="row justify-content-center">
@@ -155,7 +161,54 @@
       </div>      
       </div>
   </div>
-  
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-3 col-sm-6 my-3">
+                <div class="card">
+                    <img src="Media/img1.jpg" class="card-img-top card-img-custom" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Título 1</h5>
+                        <p class="card-text">Descripción de la card 1.</p>
+                        <a href="#" class="btn btn-primary">Ir a detalle</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 my-3">
+                <div class="card">
+                    <img src="Media/img2.jpg" class="card-img-top card-img-custom" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Título 2</h5>
+                        <p class="card-text">Descripción de la card 2.</p>
+                        <a href="#" class="btn btn-primary">Ir a detalle</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 my-3">
+                <div class="card">
+                    <img src="Media/img3.jpeg" class="card-img-top card-img-custom" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Título 3</h5>
+                        <p class="card-text">Descripción de la card 3.</p>
+                        <a href="#" class="btn btn-primary">Ir a detalle</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 my-3">
+                <div class="card">
+                    <img src="Media/img4.JPG" class="card-img-top card-img-custom" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Porque te amo mucho</h5>
+                        <p class="card-text">Descripción de la card 4.</p>
+                        <a href="#" class="btn btn-primary">Ir a detalle</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>      
+    </div>
+</div>
 </body>
 <script>
   document.addEventListener('scroll', function () {
