Se agrego el background

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           width: 100%;
           text-align: center;
           top: 50%;
-          transform: translateY(-50%);
+          transform: translateY(-30%);
         }
         @media (max-width: 576px) {
           .parallax-text {
@@ -64,6 +64,13 @@
             padding-right: 30px;
           }
         }
+        @media (min-width: 828px) {
+          .parallax-text {
+            padding-left: 30px;
+            padding-right: 30px;
+          }
+        }
+                
     </style>
 </head>
 <body>
