--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <link rel="stylesheet" href="Css/bootstrap.css">
   
     <style>
+      .box-container .bg-gray {
+  margin: 7.5px;
+}
+
+@media (min-width: 768px) {
+  .box-container .bg-gray {
+    margin: 15px;
+  }
+}
+      .inner-container {
+      display: flex;
+      min-width: 100%;
+    }
+
+    ::-webkit-scrollbar {
+      height: 8px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background-color: rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
+    }
+      .bg-gray {
+        background-color: #a9a9a9;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+        border-radius: 10px;
+      }
        .card-img-custom {
         height: 200px;
        object-fit: cover;
@@ -56,7 +92,7 @@
           width: 100%;
           text-align: center;
           top: 50%;
-          transform: translateY(-30%);
+          transform: translateY(30%);
         }
         @media (max-width: 576px) {
           .parallax-text {
@@ -215,6 +251,49 @@
         </div>
     </div>      
     </div>
+    <div class="container mt-5">
+      <div class="row g-4 overflow-auto box-container" id="scrolling-boxes" >
+        <div class="inner-container">
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 1</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 2</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 3</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 4</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 5</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 6</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 7</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 8</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 9</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 10</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 11</div>
+          </div>
+          <div class="col-6 col-md-2">
+            <div class="bg-gray p-4">Cuadro 12</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 </div>
 </body>
 <script>
@@ -224,6 +303,22 @@
 
     parallaxText.style.transform = `translateY(${scrollPosition * 0.3}px)`;
   });
+
+  document.addEventListener('scroll', function () {
+    const parallaxText = document.querySelector('.parallax-text');
+    const scrollPosition = window.scrollY;
+
+    parallaxText.style.transform = `translateY(${scrollPosition * 0.3}px)`;
+});
+
+// Función de desplazamiento automático horizontal
+function autoScroll() {
+  const scrollingBoxes = document.getElementById('scrolling-boxes');
+  scrollingBoxes.scrollBy({ left: 1, top: 0, behavior: 'smooth' });
+}
+
+// Iniciar el desplazamiento automático horizontal
+setInterval(autoScroll, 30);
 </script>
 <script src="js/bootstrap.js"></script>
 </html>
