Se agrego el carrusel scroll

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="Css/bootstrap.css">
   
     <style>
+
+.box-container::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.box-container::-webkit-scrollbar:horizontal {
+  height: 8px;
+}
+
+.box-container::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.box-container::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
       .box-container .bg-gray {
   margin: 7.5px;
 }
